Closed
Bug 779445
Opened 13 years ago
Closed 13 years ago
SegFault in WorkerMemoryReporter because it accesses mWorkerPrivate when null (only in debug builds)
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla17
| Tracking | Status | |
|---|---|---|
| firefox16 | --- | fixed |
People
(Reporter: ttaubert, Assigned: ttaubert)
References
Details
Attachments
(1 file)
|
772 bytes,
patch
|
bent.mozilla
:
review+
Gavin
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Working on bug 754671, my debug try builds crashed reliably in test_memoryReporters.xul. I could reproduce this locally and the culprit was pretty obvious. Attached a small patch that should fix this problem.
Attachment #647893 -
Flags: review?(bent.mozilla)
Comment on attachment 647893 [details] [diff] [review]
trivial patch
Review of attachment 647893 [details] [diff] [review]:
-----------------------------------------------------------------
Oops :-/
Thanks!
Attachment #647893 -
Flags: review?(bent.mozilla) → review+
| Assignee | ||
Comment 2•13 years ago
|
||
Whiteboard: [fixed-in-fx-team]
| Assignee | ||
Comment 3•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Whiteboard: [fixed-in-fx-team]
Target Milestone: --- → mozilla17
| Assignee | ||
Comment 4•13 years ago
|
||
Comment on attachment 647893 [details] [diff] [review]
trivial patch
[Approval Request Comment]
Bug caused by (feature/regressing bug #): ?
User impact if declined: we need this for bug 754671.
Testing completed (on m-c, etc.): Landed a long time ago on nightly.
Risk to taking this patch (and alternatives if risky): Virtually no risk.
String or UUID changes made by this patch: None.
Attachment #647893 -
Flags: approval-mozilla-aurora?
Updated•13 years ago
|
Attachment #647893 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
| Assignee | ||
Comment 5•13 years ago
|
||
status-firefox16:
--- → fixed
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•