Bug 779445 - SegFault in WorkerMemoryReporter because it accesses mWorkerPrivate when null; r=bent